--- a/thongke.html
+++ b/thongke.html
@@ -11,15 +11,26 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <style>
     /* body { padding: 20px; background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%); } */
-    body { 
+    /* body { 
     padding: 20px; 
     background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%); 
-    
-    /* Thêm các dòng này để kết hợp padding sẵn có với vùng an toàn */
     padding-top: calc(20px + env(safe-area-inset-top));
     padding-left: calc(20px + env(safe-area-inset-left));
     padding-right: calc(20px + env(safe-area-inset-right));
     padding-bottom: calc(20px + env(safe-area-inset-bottom));
+} */
+ body {
+  /* Các thuộc tính cũ */
+  padding-top: calc(20px + env(safe-area-inset-top));
+  padding-right: calc(20px + env(safe-area-inset-right));
+  padding-bottom: calc(20px + env(safe-area-inset-bottom));
+  padding-left: calc(20px + env(safe-area-inset-left));
+  background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%);
+  
+  /* Các thuộc tính mới để khắc phục */
+  margin: 0;
+  min-height: 100dvh;
+  box-sizing: border-box; 
 }
     .section { margin-bottom: 30px; }
     h2 { margin-top: 0; }
