--- a/thongke.html
+++ b/thongke.html
@@ -19,19 +19,35 @@
     padding-right: calc(20px + env(safe-area-inset-right));
     padding-bottom: calc(20px + env(safe-area-inset-bottom));
 } */
- body {
-  /* Các thuộc tính cũ */
+ /* body {
   padding-top: calc(20px + env(safe-area-inset-top));
   padding-right: calc(20px + env(safe-area-inset-right));
   padding-bottom: calc(20px + env(safe-area-inset-bottom));
   padding-left: calc(20px + env(safe-area-inset-left));
   background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%);
   
-  /* Các thuộc tính mới để khắc phục */
+
   margin: 0;
   min-height: 100dvh;
   box-sizing: border-box; 
-}
+} */
+   html {
+    height: 100%;
+  }
+
+  body {
+    /* Giữ nguyên các thuộc tính bạn đã có */
+    margin: 0;
+    padding-top: calc(20px + env(safe-area-inset-top));
+    padding-right: calc(20px + env(safe-area-inset-right));
+    padding-bottom: calc(20px + env(safe-area-inset-bottom));
+    padding-left: calc(20px + env(safe-area-inset-left));
+    background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%);
+    box-sizing: border-box;
+
+    /* THAY ĐỔI DÒNG NÀY */
+    min-height: 100%; /* Thay vì 100dvh, hãy dùng 100% để kế thừa từ <html> */
+  }
     .section { margin-bottom: 30px; }
     h2 { margin-top: 0; }
     .stat-grid {
