--- a/thongke.html
+++ b/thongke.html
@@ -7,47 +7,36 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.6.2/sql-wasm.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
-   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <style>
-    /* body { padding: 20px; background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%); } */
-    /* body { 
-    padding: 20px; 
-    background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%); 
-    padding-top: calc(20px + env(safe-area-inset-top));
-    padding-left: calc(20px + env(safe-area-inset-left));
-    padding-right: calc(20px + env(safe-area-inset-right));
-    padding-bottom: calc(20px + env(safe-area-inset-bottom));
-} */
- /* body {
-  padding-top: calc(20px + env(safe-area-inset-top));
-  padding-right: calc(20px + env(safe-area-inset-right));
-  padding-bottom: calc(20px + env(safe-area-inset-bottom));
-  padding-left: calc(20px + env(safe-area-inset-left));
-  background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%);
-  
+    /* === PHẦN SỬA LỖI HIỂN THỊ NỀN === */
+    html {
+      height: 100%;
+    }
 
-  margin: 0;
-  min-height: 100dvh;
-  box-sizing: border-box; 
-} */
-   html {
-    height: 100%;
-  }
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1; /* Đưa lớp nền này ra phía sau */
+      background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%);
+    }
+    
+    body {
+      background-color: transparent; /* Nền của body trong suốt để thấy lớp ::before */
+      margin: 0;
+      /* Dùng calc() để kết hợp padding gốc với vùng an toàn */
+      padding-top: calc(20px + env(safe-area-inset-top));
+      padding-right: calc(20px + env(safe-area-inset-right));
+      padding-bottom: calc(20px + env(safe-area-inset-bottom));
+      padding-left: calc(20px + env(safe-area-inset-left));
+      box-sizing: border-box;
+    }
 
-  body {
-    /* Giữ nguyên các thuộc tính bạn đã có */
-    margin: 0;
-    padding-top: calc(20px + env(safe-area-inset-top));
-    padding-right: calc(20px + env(safe-area-inset-right));
-    padding-bottom: calc(20px + env(safe-area-inset-bottom));
-    padding-left: calc(20px + env(safe-area-inset-left));
-    background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%);
-    box-sizing: border-box;
-
-    /* THAY ĐỔI DÒNG NÀY */
-    min-height: 100%; /* Thay vì 100dvh, hãy dùng 100% để kế thừa từ <html> */
-  }
+    /* === CÁC STYLE GỐC GIỮ NGUYÊN === */
     .section { margin-bottom: 30px; }
     h2 { margin-top: 0; }
     .stat-grid {
@@ -107,67 +96,63 @@
     }
 
     #categoryStats {
-    width: 100%;
-    /* max-width: 600px; */
-    margin: 0 auto;
-    box-sizing: border-box;
-  }
+      width: 100%;
+      margin: 0 auto;
+      box-sizing: border-box;
+    }
 
-  /* Tùy chọn: giữ cho thanh progress không tràn */
-  .progress-bar-bg {
-    width: 100%;
-    box-sizing: border-box;
-  }
+    .progress-bar-bg {
+      width: 100%;
+      box-sizing: border-box;
+    }
 
-  /* Giao diện giống modal */
-  #tourSelect {
-    width: 100%;
-    padding: 8px;
-    margin-top: 4px;
-    font-size: 20px;
-    font-family: inherit;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
+    #tourSelect {
+      width: 100%;
+      padding: 8px;
+      margin-top: 4px;
+      font-size: 20px;
+      font-family: inherit;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
 
-  .header-row {
-    position: relative;
-    margin-bottom: 24px;
-    text-align: center;
-  }
+    .header-row {
+      position: relative;
+      margin-bottom: 24px;
+      text-align: center;
+    }
 
-  .header-row h1 {
-    margin: 0;
-    font-size: 28px;
-  }
+    .header-row h1 {
+      margin: 0;
+      font-size: 28px;
+    }
 
-  .back-button {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 46px;
-    height: 36px;
-    background: #456882;
-    color: white;
-    border-radius: 10px;
-    text-decoration: none;
-    transition: background 0.2s;
-    padding: 0;
-  }
-  .back-button svg {
-    margin-left: 5px;
-    margin-top: 0px;
-  }
+    .back-button {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 46px;
+      height: 36px;
+      background: #456882;
+      color: white;
+      border-radius: 10px;
+      text-decoration: none;
+      transition: background 0.2s;
+      padding: 0;
+    }
+    .back-button svg {
+      margin-left: 5px;
+      margin-top: 0px;
+    }
 
-  .back-button:hover {
-    background: #005f99;
-  }
-
+    .back-button:hover {
+      background: #005f99;
+    }
   </style>
 </head>
 <body>
@@ -179,7 +164,6 @@
         <path d="M18 15h-6v4l-7-7 7-7v4h6v6z" />
       </svg>
     </a>
-
 
     <h1>Thống kê</h1>
   </div>
