--- a/thongke.html
+++ b/thongke.html
@@ -183,10 +183,17 @@
   <script src="thongke.js"></script>
 
   <div class="section">
-    <h2>Thống kê theo ngày</h2>
-    <canvas id="dailyBarChart" style="max-width: 100%; margin-bottom: 20px;"></canvas>
-    <canvas id="dailyLineChart" style="max-width: 100%;"></canvas>
+    <div style="display: flex; align-items: center; justify-content: space-between;">
+      <h2 style="margin: 0;">Biểu đồ</h2>
+      <div>
+        <label><input type="radio" name="chartType" value="bar" checked> 📊 Cột</label>
+        <label style="margin-left: 10px;"><input type="radio" name="chartType" value="line"> 〽️ 📈 📉 💹 Đường</label>
+      </div>
+    </div>
+
+    <canvas id="chartCanvas" style="max-width: 100%; margin-top: 16px;"></canvas>
   </div>
+
 
 </body>
 </html>
