--- a/thongke.html
+++ b/thongke.html
@@ -187,7 +187,7 @@
       <h2 style="margin: 0;">Biểu đồ</h2>
       <div>
         <label><input type="radio" name="chartType" value="bar" checked> 📊 Cột</label>
-        <label style="margin-left: 10px;"><input type="radio" name="chartType" value="line"> 〽️ 📈 📉 💹 Đường</label>
+        <label style="margin-left: 10px;"><input type="radio" name="chartType" value="line"> 〽️ Đường</label>
       </div>
     </div>
 
